# openai-logp-viewer

./: .gitignore  .replit  Home.py  README.md  SECURITY_AUDIT_REPORT.md  app.py  app_old.py  pyproject.toml  replit.md
attached_assets/: Pasted--Enhanced-Streamlit-App-OpenAI-Text-Generation-with-Logprob-Highlighting-Optimized-version-wit-1751015693850_1751015693852.txt  Pasted--span-class-token-tooltip-style-background-color-rgba-34-139-34-0-8-padding-2px-4px-margi-1751015229670_1751015229671.txt  Pasted-Professional-Summary-Hello-I-m-Daniel-a-Senior-Scientist-and-Data-Scientist-deeply-passionate-abo-1750435522764_1750435522765.txt  Pasted-Professional-Summary-Hello-I-m-Daniel-a-Senior-Scientist-and-Data-Scientist-deeply-passionate-abo-1750435826297_1750435826298.txt  Pasted-The-future-of-artificial-intelligence-AI-is-a-topic-of-significant-interest-and-speculation-with--1749041224071.txt  SECURITY_NOTICE.md  app.py
pages/: 1_Text_Generator.py  2_About.py  About.py  Text_Generator.py  about.py
utils/: cache_manager.py  color_schemes.py  export_manager.py  rate_limiter.py  statistics.py
